--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -41,7 +41,7 @@
     z-index: -2;
   }
 
-  .container {
+  & > .container {
     position: relative;
     z-index: 1;
 
@@ -78,7 +78,7 @@
       border-bottom-right-radius: 0;
     }
 
-    .container {
+    & > .container {
       &:before {
         top: 37%;
         right: -3em;
